subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Switch_Invalid_1.while
void foo(int x) {
    switch (x) {
        case 4:
            break;
        case "foo":
            break;
        default:
    }
}

void main() {
    foo(1);
}

